# sqlmodel-base

./: README.md  database.db  pyproject.toml
sqlmodel_base/: base.py  cli.py  database.py
sqlmodel_base/hero/: cli.py  models.py
sqlmodel_base/team/: models.py
