[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlmodel-base"
dynamic = ["version"]
description = 'tyring out sqlmodel base class'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Waylon S. Walker", email = "waylon@waylonwalker.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [ 'rich', 'sqlmodel', 'typer', 'iterfzf', 'fastapi', 'uvicorn']

[project.urls]
Documentation = "https://github.com/waylonwalker/sqlmodel-base#readme"
Issues = "https://github.com/waylonwalker/sqlmodel-base/issues"
Source = "https://github.com/waylonwalker/sqlmodel-base"

[project.scripts]
sqlmodel-base = "sqlmodel_base.cli:app"

[tool.hatch.version]
path = "sqlmodel_base/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:sqlmodel_base tests}"

[tool.coverage.run]
source_pkgs = ["sqlmodel_base", "tests"]
branch = true
parallel = true
omit = [
  "sqlmodel_base/__about__.py",
]

[tool.coverage.paths]
sqlmodel_base = ["sqlmodel_base", "*/sqlmodel-base/sqlmodel_base"]
tests = ["tests", "*/sqlmodel-base/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
